--- a/about.html
+++ b/about.html
@@ -21,16 +21,14 @@
           <img src="1379688576.svg" alt="" class="laptop">
         </div>
         <div class="con">
-          <h3>About Me</h3>
         <p>
          
-            Hello! My name is Yusuf Ayomide Deborah. I am a very simple person. I don't have a lot of hobbies but I enjoy creating things that live on the internet. I am studying Electrical and Electronics Engineering in the University of Ilorin and I am in my third year.</p>
+            Hello! My name is Yusuf Ayomide Deborah. I am a very simple person. I don't have a lot of hobbies but I enjoy creating things that live on the internet. I learned early as a child that I can be anything, so that is just what I am doing....being anything I want. I am an aspiring Electrical Engineer, and a Junior developer. </p>
         <p>
-          I am passionate about Software Development. I am now looking for a junior dev position as I recently learned how to code by myself.
-         I started my journey as a developer after I left secondary school. I had a gap year and an uncle introduced me to HTML, and once that happened, I was completely hooked to the world of computers.
+         My journey as a developer started after my secondary education, when a friend introduced me to it. It felt like I just discovered a whole new world, and I immediately fell in love. Due to circumstances, a lot of free time fell on my side, and I have been completely hooked to the world of computers.
          </p>
         <p>
-         Lately, I’ve discovered my passion for the world of web development and the beauty behind building useful websites like the one you will find in this portfolio. I’m now looking for a junior dev position to finally kick start my career and learn among professionals.
+         I now have an ever growing passion for the world of web development and the beauty behind building useful websites like the one you will find in my portfolio. The perfect junior developer job is what I am looking forward to now. 
         </p>
         <p>
          Here are a few technolgies I've been working on recently:
@@ -42,6 +40,7 @@
           <li>SASS</li>
          </ul>
         </p>
+
       </div>
    
        
