--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       <div class="header">
         <ul class="sidenav">
           <li><a href="about.html">About</a></li>
-          <li><a href="project.html">Projects</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="#" id="case" class="active">Home</a></li>
         </ul>
@@ -35,7 +34,7 @@
       <h1>Deborah</h1>
       <span>JUNIOR FRONT END DEVELOPER</span>
       <p>I am a junior front end devloper with skills based in Ota.</p>
-      <a class="submit" href="/Users/BigDebby/Desktop/portfolio/project.html">My Projects</a>
+      <a class="submit" href="project.html">My Projects</a>
       </div>
       <div class="socials">
         <ul class="soc-icons">
